clang/test/CIR/IR/invalid-annotations.cir
// Test attempt to construct ill-formed global annotations
// RUN: cir-opt %s -verify-diagnostics -split-input-file

// expected-error @below {{GlobalAnnotationValuesAttr should at least have one annotation}}
module attributes {cir.global_annotations = #cir<annotation_values []>} {}

// -----

// expected-error @below {{Element of GlobalAnnotationValuesAttr annotations array must be an array}}
module attributes {cir.global_annotations = #cir<annotation_values ["2"]>} {}

// -----

// expected-error @below {{Element of GlobalAnnotationValuesAttr annotations array must be a 2-element array}}
module attributes {cir.global_annotations = #cir<annotation_values [["2",1,2]]>} {}

// -----

// expected-error @below {{Element of GlobalAnnotationValuesAttr annotationsarray must start with a string}}
module attributes {cir.global_annotations = #cir<annotation_values [[2,[1,2]]]>} {}

// -----

// expected-error @below {{The second element of GlobalAnnotationValuesAttrannotations array element must be of type AnnotationValueAttr}}
module attributes {cir.global_annotations = #cir<annotation_values [["2",[1,2]]]>} {}
